tests/compile-fail/pcap_socket_dropped_before_packet.stderr
error[E0505]: cannot move out of `socket` because it is borrowed
  --> tests/compile-fail/pcap_socket_dropped_before_packet.rs:12:10
   |
7  |     let socket = NethunsSocketPcap::open(opt, "filename", false).unwrap();
   |         ------ binding `socket` declared here
8  |
9  |     let p1 = socket.read().unwrap();
   |              ------ borrow of `socket` occurs here
...
12 |     drop(socket);
   |          ^^^^^^ move out of `socket` occurs here
13 |     drop(p1);
   |          -- borrow later used here
